--- a/templates/add.html
+++ b/templates/add.html
@@ -5,6 +5,9 @@
 {% block content %}
 <div class="content">
     <h1 class="heading">Add a Movie</h1>
+
+    {{ render_form(form) }}
+
 </div>
 {% endblock %}
 
