--- a/templates/add.html
+++ b/templates/add.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% from 'bootstrap5/form.html' import render_form %}
 
 {% block title %}Add Movie{% endblock %}
 
@@ -6,7 +7,7 @@
 <div class="content">
     <h1 class="heading">Add a Movie</h1>
 
-    {{ render_form(form) }}
+    {{ render_form(form, novalidate=True) }}
 
 </div>
 {% endblock %}
