--- a/templates/select.html
+++ b/templates/select.html
@@ -5,9 +5,15 @@
 {% block content %}
 <div class="container">
     <h1 class="heading">Select Movie</h1>
-  <p>
-    <a href="#"> MOVIE TITLE - MOVIE RELEASE DATE</a>
-  </p>
+
+    {% for movie in movies%}
+
+    <p>
+        <a href="{{ url_for('append_movie', id=movie[2]) }}"> {{ movie[0] }} - {{ movie[1] }}</a>
+    </p>
+
+    {% endfor %}
+
 
 </div>
 {% endblock %}
