--- a/templates/select.html
+++ b/templates/select.html
@@ -8,9 +8,9 @@
 
     {% for movie in movies%}
 
-    <p>
-        <a href="{{ url_for('append_movie', id=movie[2]) }}"> {{ movie[0] }} - {{ movie[1] }}</a>
-    </p>
+        <p>
+            <a href="{{ url_for('append_movie', id_m=movie[2]) }}"> {{ movie[0] }} - {{ movie[1] }} </a>
+        </p>
 
     {% endfor %}
 
